<resources>
    <string name="app_name">Day Finder</string>
    <string name="text">result</string>
    <string name="date">Enter Date: </string>
    <string name="submit">SUBMIT</string>
    <string name="copyright"> © AKASHDIP NEOGI </string>
    <string name="instructions">Please enter the year between the year limit of (1800 to 3000) and in (DD/MM/YYYY) format or in DDMMYYYY format. </string>
    <string name="rate">WANT TO RATE THIS APP?</string>
    <string name="tryagain">WANT TO TRY THIS APP AGAIN?</string>
    <string name="name">Akashdip Neogi</string>
    <string name="contact">CONNECT WITH US</string>
    <string name="contact_us">CONTACT US</string>
    <string name="mail">Want to drop us a mail?</string>
    <string name="rate_rate">PLEASE RATE US ACCORDING TO THE APP USING EXPERIENCE</string>
    <string name="thanks">THANKS FOR YOUR VALUABLE FEEDBACK :)</string>
    <string name="walla">WOW AMAZING YOU GOT THE EASTER EGG FOR THIS APP :) </string>
    <string name="login">Please enter the ID: </string>
    <string name="title_activity_layout_code">layout_code</string>
    <string name="layout">Layout code where all the codes are saved</string>
    <string name="activity">All Activity code</string>
    <string name="MainActivity_layout">MainActivity Layout code</string>
    <string name="code">code layout code</string>
    <string name="contact_code">Contact Us Layout code</string>
    <string name="layoutCode">Layout(layout) code</string>
    <string name="Login_code">Login Layout code</string>
    <string name="rate_us">Rate Us Layout code</string>
    <string name="All_layout">All Layout files code</string>
    <string name="All_code">Code fragments</string>
    <string name="values">Values codes</string>
    <string name="gradle">Build.gradle code</string>
    <string name="code_class_activity_code">code class activity code</string>
    <string name="contact_us_activity_code">Contact Us Activity code</string>
    <string name="activity_code_where_all_the_codes_are_saved">Activity code where all the codes are saved</string>
    <string name="login_activity_code">Login Activity code</string>
    <string name="mainactivity_code">Mainactivity code</string>
    <string name="rate_us_activity_code">rate us activity code</string>
    <string name="string">string.xml</string>
    <string name="styles_xml">Styles.xml</string>
    <string name="colors_xml">colors.xml</string>
    <string name="all_values_codes">All values codes</string>
    <string name="contact_dev">PLEASE CONTACT THE DEVELOPER TO ACCESS THIS FILE!!!</string>
    <string name="drop_us_a_mail">Want to drop me an email?</string>
</resources>