<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".all_activity_code">

    <TextView
        android:id="@+id/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:background="@color/colorPrimary"
        android:text="@string/layout"
        android:textSize="24sp" />

    <Button
        android:id="@+id/code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:background="@android:color/white"
        android:text="@string/code_class_activity_code" />

    <Button
        android:id="@+id/contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:background="@android:color/white"
        android:text="@string/contact_us_activity_code" />

    <Button
        android:id="@+id/Layoutcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:background="@android:color/white"
        android:text="@string/activity_code_where_all_the_codes_are_saved" />

    <Button
        android:id="@+id/Login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:background="@android:color/white"
        android:text="@string/login_activity_code" />

    <Button
        android:id="@+id/MainActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:background="@android:color/white"
        android:text="@string/mainactivity_code" />

    <Button
        android:id="@+id/rate_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:background="@android:color/white"
        android:text="@string/rate_us_activity_code" />

    <EditText
        android:id="@+id/layout_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="30sp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="12sp" />

    <ImageButton
        android:id="@+id/repeat"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_marginLeft="160sp"
        app:srcCompat="@drawable/repeat" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20sp"
        android:text="@string/copyright"
        android:textColor="@color/copyright"
        android:textSize="24sp" />

</LinearLayout>