<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".code" >

    <TextView
        android:id="@+id/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:text="@string/All_code"
        android:textSize="24sp" />

    <Button
        android:id="@+id/all_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:text="@string/All_layout" />

    <Button
        android:id="@+id/all_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:text="@string/activity" />

    <Button
        android:id="@+id/all_values"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:text="@string/values" />

    <Button
        android:id="@+id/gradle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/gradle" />

    <EditText
        android:id="@+id/codeviewer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="20sp"
        android:layout_marginRight="20sp"
        android:layout_marginBottom="30sp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:textSize="12sp" />

    <ImageButton
        android:id="@+id/repeat"
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_marginLeft="160sp"
        app:srcCompat="@drawable/repeat" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20sp"
        android:text="@string/copyright"
        android:textColor="@color/copyright"
        android:textSize="24sp" />
</LinearLayout>