<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".Contact_us">

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:fontFamily="times"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/image" />

    <TextView
        android:id="@+id/Contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="times"
        android:layout_marginTop="20sp"
        android:text="@string/contact"
        android:textColor="@color/black"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="363dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <!--
        <ImageButton
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/facebook" />
          -->

        <ImageButton
            android:id="@+id/ig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ig" />

        <!--
        <ImageButton
            android:id="@+id/twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/twitter" />
        -->

        <ImageButton
            android:id="@+id/linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/linkedin" />
    </LinearLayout>

    <TextView
        android:id="@+id/mail_me"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/mail"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:fontFamily="times" />

    <ImageButton
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/email" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="15sp"
        android:layout_marginRight="20sp"
        android:text="@string/copyright"
        android:textColor="@color/copyright"
        android:textSize="24sp" />

</LinearLayout>